--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -115,7 +115,7 @@ img {
   border-radius: 0.7rem;
   font-weight: bold;
   cursor: pointer;
-  transition: background-color 0.3s;
+  /* transition: background-color 0.3s; */
 }
 
 .login {
@@ -138,6 +138,23 @@ img {
   background-color: #1e6fd0;
 }
 
+/* پیش‌فرض: منوی موبایل پنهان، منوی دسکتاپ نمایان */
+.mobile-menu , .auth-buttons2{
+  display: none;
+}
+
+.desktop-nav {
+  display: flex;
+}
+/* همبرگر بدون bullet و استایل اضافی */
+.hamburger {
+  font-size: 3rem;
+  cursor: pointer;
+  list-style: none;
+  background: none;
+  border: none;
+  color: white;
+}
 @media (max-width: 800px) {
   .cover {
     flex-direction: column;
@@ -179,5 +196,53 @@ img {
 
   .cover-img-left:hover {
     box-shadow: none; /* غیرفعال کردن سایه در موبایل برای سادگی */
+  }
+  .site-header{
+    display: flex;
+    padding: 0;
+  }
+  .auth-buttons2{
+    display: flex;
+    padding-right: 1rem;
+  }
+  .logo-area{
+    width: 100%;
+    justify-content: center;
+  }
+  .btn{
+    padding: 0.8rem 1.5rem;
+  }
+  .desktop-nav {
+    display: none; /* پنهان کردن nav و دکمه‌ها در موبایل */
+  }
+
+  .mobile-menu {
+    display: block;
+    width: 30%;
+  }
+
+  .mobile-menu nav {
+    padding: 1rem;
+    margin-left: -5rem;
+  }
+
+  .mobile-menu ul {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 0;
+    list-style: none;
+    backdrop-filter: blur(5rem);
+  }
+
+  .mobile-menu .auth-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    margin-top: 1rem;
+  }
+
+  .mobile-menu .btn {
+    width: 100%;
   }
 }
