--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -259,6 +259,30 @@ img {
   object-fit: contain;
 }
 
+.logos-section {
+  width: 100%;
+}
+
+.green-navbar {
+  background-color: #4caf50;
+  padding: 1rem 2rem;
+}
+
+.green-navbar ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+.green-navbar li a img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
 @media (max-width: 800px) {
   .cover {
     flex-direction: column;
@@ -367,7 +391,27 @@ img {
     font-size: 2rem;
   }
 
-  .trust-span{
+  .trust-span {
     width: 70%;
+  }
+  .green-navbar ul {
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+  }
+
+  .green-navbar li {
+    width: 100%;
+    margin-bottom: 3rem;
+  }
+
+  .green-navbar li a{
+    display: flex;
+    justify-content: center;
+  }
+
+  .green-navbar li a img {
+    width: 90%;  /* تقریباً کل عرض صفحه */
   }
 }
