--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -16,6 +16,10 @@
   font-family: "poppins";
   src: url(/assets/font/Poppins-Regular.ttf);
 }
+@font-face {
+  font-family: "poppins-regular";
+  src: url(/assets/font/Poppins-Regular.ttf);
+}
 * {
   box-sizing: border-box;
   margin: 0;
@@ -283,6 +287,137 @@ img {
   display: block;
 }
 
+.left-chart {
+  width: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.saving-chart {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.saving-chart-example {
+  width: 100%;
+  gap: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  background-color: #004852;
+  color: white;
+  padding: 2rem 0 2rem 2rem;
+  position: relative;
+  border-radius: 0.7rem;
+  height: max-content;
+}
+
+.saving-title {
+  display: flex;
+  gap: 0.5rem;
+  flex-direction: column;
+}
+
+.number {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.chart {
+  background-color: #004852;
+  width: 50%;
+  position: absolute;
+  display: flex;
+  display: flex;
+  bottom: 10%;
+  left: 28%;
+  justify-content: space-evenly;
+  align-items: flex-end;
+}
+
+.april,
+.may,
+.june,
+.july,
+.aug,
+.sep {
+  width: 10%;
+  border-radius: 1rem 1rem 0 0;
+}
+
+.april,
+.june {
+  background-color: white;
+  height: 3.5rem;
+}
+
+.may {
+  background-color: white;
+  height: 5.5rem;
+}
+
+.july {
+  background-color: white;
+  height: 6.5rem;
+}
+
+.aug {
+  background-color: #2c9b7c;
+  height: 9.5rem;
+}
+
+.sep {
+  background-color: white;
+  height: 4.5rem;
+}
+
+.explain-about-our-bussiness {
+  width: 41%;
+  padding: 4rem 0;
+}
+
+.about-our-bussiness h3 {
+  margin-top: 1rem;
+  font-family: "poppins-medium";
+  font-size: 2.5rem;
+}
+
+.expenses-tracker,
+.automated-invoicing,
+.crypto-connection {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  padding: 2rem;
+}
+
+.expenses-tracker:hover,
+.automated-invoicing:hover,
+.crypto-connection:hover {
+  background-color: #f1ffd2;
+}
+
+.expenses-tracker h4,
+.automated-invoicing h4,
+.crypto-connection h4 {
+  font-size: 1.2rem;
+}
+
+.expenses-tracker p,
+.crypto-connection p,
+.automated-invoicing p {
+  font-size: 1.1rem;
+  color: gray;
+  width: 80%;
+  font-family: "poppins-regular";
+}
+
+.about-our-bussiness a {
+  text-decoration: none;
+  color: black;
+}
+
 @media (max-width: 800px) {
   .cover {
     flex-direction: column;
@@ -406,12 +541,85 @@ img {
     margin-bottom: 3rem;
   }
 
-  .green-navbar li a{
+  .green-navbar li a {
     display: flex;
     justify-content: center;
   }
 
   .green-navbar li a img {
-    width: 90%;  /* تقریباً کل عرض صفحه */
+    width: 90%; /* تقریباً کل عرض صفحه */
+  }
+
+  .saving-chart {
+    flex-direction: column;
+    padding: 2rem;
+    gap: 2rem;
+  }
+
+  .left-chart {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .saving-chart-example {
+    padding: 1.5rem;
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+
+  .chart {
+    position: static;
+    width: 100%;
+    margin-top: 1.5rem;
+    justify-content: space-around;
+  }
+
+  .number {
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 0;
+  }
+
+  .explain-about-our-bussiness {
+    width: 100%;
+    padding: 2rem 1rem;
+    gap: 2rem;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .about-our-bussiness h3 {
+    font-size: 1.8rem;
+    text-align: center;
+  }
+
+  .about-our-bussiness span {
+    text-align: center;
+    display: block;
+  }
+
+  .about-our-bussiness a {
+    font-size: 1.5rem;
+  }
+
+  .options {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .expenses-tracker,
+  .crypto-connection,
+  .automated-invoicing {
+    padding: 1.5rem;
+  }
+
+  .expenses-tracker p,
+  .crypto-connection p,
+  .automated-invoicing p {
+    width: 100%;
+    font-size: 1rem;
   }
 }
