--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -20,6 +20,10 @@
   font-family: "poppins-regular";
   src: url(/assets/font/Poppins-Regular.ttf);
 }
+@font-face {
+  font-family: "helvetica";
+  src: url(/assets/font/Helvetica.ttf);
+}
 * {
   box-sizing: border-box;
   margin: 0;
@@ -558,7 +562,235 @@ img {
   width: 100%;
 }
 
-@media (max-width:1024px) {
+.services-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+  padding: 2rem 0;
+}
+
+.services-heading {
+  font-family: "poppins-regular";
+  font-size: 3rem;
+}
+
+.services-heading span {
+  margin-left: 1.5rem;
+}
+
+.services-header {
+  display: flex;
+  /* width: 50%; */
+  justify-content: space-around;
+}
+
+.services-img {
+  width: 35%;
+}
+
+.services-explain {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  justify-content: center;
+}
+
+.services-logo {
+  width: 7%;
+}
+
+.explain {
+  font-size: 3rem;
+}
+
+.create-card {
+  display: flex;
+  flex-direction: column;
+  gap: 6rem;
+}
+
+.creat-card-and-personalize {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.creat-card-explain {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  gap: 0.5rem;
+}
+
+.creat-card-logo {
+  width: 7%;
+}
+
+.creat-your-card {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  align-content: center;
+  flex-wrap: wrap;
+}
+
+.creat-your-card img {
+  width: 45%;
+}
+
+.card-name {
+  font-size: 1.5rem;
+}
+
+.create-card,
+.personalize {
+  width: 45%;
+  padding: 2rem 2rem 0 2rem;
+}
+
+.personalize {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  background-color: #001027;
+  color: white;
+  border-radius: 1rem;
+  position: relative;
+}
+
+.personalize-logo {
+  width: 8%;
+  margin-left: 2rem;
+}
+
+.personalize-heading {
+  margin-left: 2rem;
+}
+
+.personalize-paragraph {
+  width: 94%;
+  margin-left: 2rem;
+  font-family: "poppins-regular";
+  font-size: 1.1rem;
+}
+
+.personalize-heading,
+.creat-card-heading {
+  font-family: "helvetica";
+  font-size: 2.5rem;
+  width: fit-content;
+}
+
+.creat-card-paragraph {
+  font-family: "poppins-regular";
+  font-size: 1.1rem;
+  width: 75%;
+}
+
+.card-example {
+  display: flex;
+  margin-top: 3rem;
+  margin-left: 2rem;
+}
+
+.tour-card {
+  display: flex;
+}
+
+.total-balance {
+  position: absolute;
+  right: 5rem;
+  bottom: 7rem;
+}
+
+.site-options {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-top: 2rem;
+}
+
+.site-options a {
+  width: 28.5%;
+  text-decoration: none;
+  color: black;
+  padding: 3rem 1.5rem;
+  border-radius: 1rem;
+}
+
+.site-options h5 {
+  font-size: 2rem;
+  font-family: "helvetica";
+}
+
+.dedication-link {
+  background-color: #e2ff54;
+}
+
+.dedication {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.dedication p {
+  font-family: "poppins-regular";
+  font-size: 1.1rem;
+  width: 85%;
+}
+
+.hold-money-link {
+  background-image: url(/assets/image/Expense\ Details\ V-1\ 1.png);
+  background-position: right;
+  background-repeat: no-repeat;
+  background-color: #ebebeb;
+}
+
+.hold-money img {
+  width: 10%;
+}
+
+.visit-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #2d907a;
+}
+
+.visit-link h5 {
+  color: white;
+  font-size: 2.8rem;
+}
+
+.visit-link span {
+  margin-left: 3.5rem;
+}
+
+.site-options-button {
+  padding: 2rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.site-options-button button {
+  background-color: transparent;
+  border: 2px solid #40af3e;
+  padding: 1.5rem 3rem;
+  font-size: 1.5rem;
+  border-radius: 3rem;
+  transition: all 0.7s;
+  cursor: pointer;
+}
+
+.site-options-button button:hover {
+  background-color: #40af3e;
+  color: white;
+}
+
+@media (max-width: 1024px) {
   .security-section {
     flex-direction: column-reverse;
     text-align: center;
@@ -582,7 +814,6 @@ img {
     width: 60%;
     margin: 0 auto;
   }
-
 }
 
 @media (max-width: 800px) {
